# QXComm

./: .gitignore  .gitmodules  ProblemRecord.md  README.md  build.sh  开发者手册.md
MSShare/: QXMSMsg.pb.cc  QXMSMsg.proto  msshare_build.sh
MSShare/include/: QXMSMsg.pb.h
PrjArchSrc/: Communication.drawio  ManageIntraDomain.drawio  Register.drawio  ServerManager.drawio
QXClient/: client_build.sh
QXClient/src/: CMakeLists.txt  QXClientConf.json  QXClientMsgBussiness.cpp  QXClientMsgHandler.cpp  QXClientWorker.cpp
QXClient/src/include/: QXClientMsgHandler.h  QXClientWorker.h
QXClient_Qt/: QXClientMain.cpp  QXClientMsgBussiness.cpp  QXClientMsgBussiness.h  QXClientWorker.h  QXClient_Qt.pro  QXClient_Qt_zh_CN.ts  mainwindow.cpp  mainwindow.h  mainwindow.ui
QXCommMngr/src/: QXCommMngr.crt  QXCommMngr.key  QXCommMngr.p12
QXCommMngr/src/backEnd/QXCommMngr/: dependency-reduced-pom.xml  pom.xml
QXCommMngr/src/backEnd/QXCommMngr/src/main/java/QXCommMngr/: Main.java  MngrHttpSvr.java  MngrWorkerSvr.java  QXMSMsg.java
QXCommMngr/src/backEnd/QXCommMngr/src/main/java/com/example/: Main.java  MngrSvrWorker.java
QXCommMngr/src/backEnd/QXCommMngr/src/main/resources/: config.properties  log4j.properties
QXCommMngr/src/frontEnd/qxcommmanager/: package-lock.json
QXServer/: server_build.sh
QXServer/src/: CMakeLists.txt  QXCommMngrClient.cpp  QXServerConf.json  QXServerMain.cpp  QXServerMsgBussiness.cpp  QXServerMsgHandler.cpp  QXServerWorker.cpp
QXServer/src/include/: QXCommMngrClient.h  QXServerMsgHandler.h  QXServerWorker.h
SCProtoMsg/: QXSCMsg.pb.cc  QXSCMsg.pb.h  QXSCMsg.proto  proto_build.sh
SCShare/: CMakeLists.txt  QXSCMsg.pb.cc  QXSCMsg.proto  QXSCShareCommon.cpp  scshare_build.sh
SCShare/include/: QXSCMsg.pb.h  QXSCShare.h
client/: CMakeLists.txt  QXClientConf.json  QXClientMain.cpp  QXClientMsgBussiness.cpp  QXClientWorker.cpp  client_build.sh
client/include/: QXClientWorker.h
client/src/include/: QXClientWorker.h
server/: server_build.sh
server/src/backEnd/: CMakeLists.txt  QXServerConf.json  QXServerMain.cpp  QXServerMsgBussiness.cpp  QXServerWorker.cpp
server/src/backEnd/include/: QXServerMsgBussiness.h  QXServerWorker.h
utils/: CMakeLists.txt  QXUtilsCmdLine.c  QXUtilsCommonUtil.c  QXUtilsCrypto.c  QXUtilsLogIO.c  QXUtilsMem.c  QXUtilsModuleCommon.c  QXUtilsModuleHealth.c  QXUtilsMsg.c  QXUtilsSafetyManager.c  QXUtilsThreadPool.c  QXUtilsTimer.c  utils_build.sh
utils/UnitTest/: UnitTest.h  UnitTestCommonUtil.c  UnitTestCrypto.c  UnitTestHealth.c  UnitTestMem.c  UnitTestMsg.c  UnitTestTPool.c  UnitTestTimer.c
utils/include/: QXCommonInclude.h  QXErrno.h  QXUtilsCmdLine.h  QXUtilsCommonUtil.h  QXUtilsCrypto.h  QXUtilsList.h  QXUtilsLogIO.h  QXUtilsMem.h  QXUtilsModuleCommon.h  QXUtilsModuleHealth.h  QXUtilsMsg.h  QXUtilsSafetyManager.h  QXUtilsThreadPool.h  QXUtilsTimer.h
